update email portion - 11/9

--- a/grubmaster-handlebars/views/restaurants.hbs
+++ b/grubmaster-handlebars/views/restaurants.hbs
@@ -165,8 +165,8 @@
     <label for="update-restaurant-website" autocomplete="on">Restaurant Website: </label>
     <input type="text" name="update-restaurant-website" id="update-restaurant-website" value="{{restaurant_website}}"> 
 
-    {{!-- <label for="update-restaurant-name" autocomplete="on">Restaurant Email: </label>
-    <input type="text" name="update-restaurant-email" id="update-restaurant-email" value="{{data.restaurant_email}}">  --}}
+    <label for="update-restaurant-email" autocomplete="on">Restaurant Email: </label>
+    <input type="text" name="update-restaurant-email" id="update-restaurant-email" value="{{data.restaurant_email}}"> 
 
     <label for="update-restaurant-city">Restaurant City: </label> 
     <select name="update-restaurant-city" id="update-restaurant-city">
