--- a/grubmaster-handlebars/views/home.hbs
+++ b/grubmaster-handlebars/views/home.hbs
@@ -1,20 +1,6 @@
-<div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#"></a>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" href="/">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/about-us">About us</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-</div>
+<h1 align="center"><strong>Grubmaster</strong></h1>
 
-<nav class="navbar navbar-inverse center navbar-light bg-light"> 
+<nav class="navbar navbar-inverse center" align="center"> 
     <div class="container">
         <div class="navbar-header">
             <button class="btn btn-outline-primary" href="/">Homepage</button> | <button class="btn btn-outline-primary" href="/restaurants">Restaurants</button> | <button class="btn btn-outline-primary" href="/cuisines">Cuisines</button> | <button class="btn btn-outline-primary" href="/cities">Cities</button> | <button class="btn btn-outline-primary" href="/users">Users</button> | <button class="btn btn-outline-primary" href="/reviews">Reviews</button> | <button class="btn btn-outline-primary" href="/restaurant_has_cuisines">Restaurants' Cuisines</button>
@@ -22,3 +8,4 @@
     </div>
 </nav>
 </div>
+
