updated restaurants and added js files

--- a/grubmaster-handlebars/views/restaurants.hbs
+++ b/grubmaster-handlebars/views/restaurants.hbs
@@ -82,7 +82,7 @@
                 <td>NULL</td>
             {{/if}}
             <td>{{this.city}}</td>
-            <td><button onClick="/">Edit</button></td>
+            {{!-- <td><button onClick="/">Edit</button></td> --}}
             <td><button onClick="deleteRestaurant({{this.restaurant_id}})">Delete</button></td>
         </tr>
         {{/each}}
