--- a/grubmaster-handlebars/views/cuisines.hbs
+++ b/grubmaster-handlebars/views/cuisines.hbs
@@ -3,7 +3,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <head>
     <meta charset="utf-8">
-    <title>Restaurants List</title>
+    <title>Cuisines List</title>
     <meta name="viewport" content="initial-scale=1, shrink-to-fit=yes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
     {{!-- <link rel="stylesheet" type="text/css" href="extensions/filter-control/bootstrap-table-filter-control.css"/> --}}
@@ -16,7 +16,7 @@
 
 {{!-- Create a table --}}
 <div id="top">
-<h1 align="center">Restaurants</h1>
+<h1 align="center">Cuisines</h1>
 
 <nav class="navbar navbar-inverse center"> 
     <div class="container">
