--- a/grubmaster-handlebars/views/restaurants.hbs
+++ b/grubmaster-handlebars/views/restaurants.hbs
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+<script src="./js/delete_restaurant.js"></script> 
 
 {{!-- The Data from our database --}}
 
@@ -46,7 +47,7 @@
 <div id="browse-restaurants">
     <table id="restaurants-table" 
     class="table table-striped table-bordered table-hover" 
-    align="right"
+    align="center"
     data-search="true"
     >
 
@@ -82,21 +83,20 @@
                 <td>NULL</td>
             {{/if}}
             <td>{{this.city}}</td>
-            {{!-- <td><button onClick="/">Edit</button></td> --}}
+            <td><button onClick="/">Edit</button></td>
             <td><button onClick="deleteRestaurant({{this.restaurant_id}})">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
     </table>
-<script src="./js/delete_restaurant.js"></script> 
-
+{{!-- <script src="./js/update_restaurant.js"></script> --}}
 </div>
 <p>&nbsp;</p>
 
 <div id="search-restaurant">
     <h2>Search for a Restaurant below.</h2>
     <p>Search by restaurant name using the field below. Partial names are OK too!</p>
-    <form id="search-restaurant-form" method='GET' action='/'>
+    <form id="search-restaurant-form" method='GET' action='/restaurants'>
         <label for="input-restaurant-name">Search by Restaurant Name: </label>
         <input type="text" name="restaurant_name" id="input-restaurant-name-search">
         
@@ -110,8 +110,9 @@
 <div id="add-restaurant">
     <h2>Add a new restaurant: </h2>
     <p>To add a new restaurant, please enter the information below and click 'Submit'! </p> 
+    <p><small>Note: * indicates a required field.</small></p>
     <form id="add-restaurant-form-ajax">
-        <p><label for="input-restaurant-name">Restaurant Name: </label>
+        <p><label for="input-restaurant-name">* Restaurant Name: </label>
         <input type="text" name="input-restaurant-name" id="input-restaurant-name" placeholder="*Name"></p>
 
         <p><label for="input-restaurant-website">Restaurant Website: </label>
@@ -120,7 +121,8 @@
         <p><label for="input-restaurant-email">Restaurant Email: </label>
         <input type="text" name="input-restaurant-email" id="input-restaurant-email" placeholder="Email"></p>
 
-        <p><label>City: </label><select name="input-restaurant-city" id="input-restaurant-city">
+        <p><label>* City:&nbsp;</label>
+        <select name="input-restaurant-city" id="input-restaurant-city">
             <option value="">Select a City</option>
             {{#each cities}}
             <option value="{{this.city_id}}">{{this.city_name}}</option>
@@ -129,27 +131,6 @@
         <input type="submit">
 
     </form>
-
-    {{!-- <form id="add-restaurant-form" method="POST" action="/add-restaurant-form">
-        <label for="input-restaurant-name">Restaurant Name:</label>
-        <input type="text" name="input-restaurant-name" id="input-restaurant-name"> 
-
-        <label for="input-restaurant-website">Restaurant Website:</label>
-        <input type="text" name="input-restaurant-website" id="input-restaurant-website">
-
-        <label for="input-restaurant-email">Restaurant Email:</label>
-        <input type="text" name="input-restaurant-email" id="input-restaurant-email">
-
-        <p><label>City: </label><select name="input-restaurant-city" id="input-restaurant-city">
-            <option value="">Select a City</option>
-            {{#each cities}}
-            <option value="{{this.city_id}}">{{this.city_name}}</option>
-            {{/each}}
-        </select></p>
-
-        <input type="submit">
-        
-    </form> --}}
 </div>
 
 <script src="./js/add_restaurant.js"></script>
@@ -159,50 +140,41 @@
 <div id="update-restaurant">
 <h2>Update a Restaurant's Details:</h2>
 <p>To update a specific restaurant's details, select their ID from the dropdown menu on the left and enter the desired new name, website, email, or city from the dropdown menu on the right.</p>
+<p><small>Note: * indicates a required field.</small></p>
 <form id="update-restaurant-form-ajax">
 
+    <label for="selectedRestaurant">* Select a Restaurant ID</label>
     <select name="selectedRestaurant" id="selectedRestaurant">
-        <option value="test">Select a Restaurant ID</option>
+        <option value="">Restaurant ID</option>
         {{#each data}}
         <option value="{{this.restaurant_id}}">{{this.restaurant_id}}</option>
         {{/each}}
     </select>
 
-    <label for="update-restaurant-name" autocomplete="on">Restaurant Name: </label>
-    <input type="text" name="update-restaurant-name" id="update-restaurant-name">
+    <p><label for="update-restaurant-name" autocomplete="on">* Restaurant Name: </label>
+    <input type="text" name="update-restaurant-name" id="update-restaurant-name"></p>
 
-    <label for="update-restaurant-website" autocomplete="on">Restaurant Website: </label>
-    <input type="text" name="update-restaurant-website" id="update-restaurant-website" value="{{restaurant_website}}"> 
+    <p><label for="update-restaurant-website" autocomplete="on">Restaurant Website: </label>
+    <input type="text" name="update-restaurant-website" id="update-restaurant-website" value="{{restaurant_website}}"></p>
 
-    <label for="update-restaurant-name" autocomplete="on">Restaurant Email: </label>
-    <input type="text" name="update-restaurant-email" id="update-restaurant-email" value="{{data.restaurant_email}}"> 
+    <p><label for="update-restaurant-name" autocomplete="on">Restaurant Email: </label>
+    <input type="text" name="update-restaurant-email" id="update-restaurant-email" value="{{data.restaurant_email}}"></p>
 
-    <label for="update-restaurant-city">Restaurant City: </label> 
+    <p><label for="update-restaurant-city">* Restaurant City: </label> 
     <select name="update-restaurant-city" id="update-restaurant-city">
         <option value="test">Select a City</option>
         {{#each cities}}
         <option value="{{this.city_id}}">{{this.city_name}}</option>
         {{/each}}
-    </select>
+    </select></p>
 
     <input type="submit">
 
 </form>
-<script src="./js/update_restaurant.js"></script> 
 
-{{!-- <form method="POST" action="/{{this.restaurant_id}}?_method=PUT">
-    <fieldset>
-        <legend>Edit Restaurant Details</legend>
-        <p>
-            <label for="update-restaurant-name">Restaurant Name: </label><br>
-            <input id="update-restaurant-name" type="text" name="update-restaurant-name" value="{{this.restaurant_name}}" />
-
-            <label for="update-restaurant-website">Restaurant Website: </label></br>
-            <input id="update-restaurant-website" type="text" name="update-restaurant-website" value="{{this."
-        </p>
-    </fieldset>
-</form> --}}
 </div>
+
+<script src="./js/update_restaurant.js"></script> 
 
 </body> 
 </html>
