--- a/grubmaster-handlebars/views/cities.hbs
+++ b/grubmaster-handlebars/views/cities.hbs
@@ -77,7 +77,7 @@
         <input type="text" name="city_name" id="input-city-name-search">
         
         <input type="submit">
-        <a href="/"><button>Reset</button></a>
+        <a href="/cities"><button>Reset</button></a>
     </form>
 </div>
 <p>&nbsp;</p>
