--- a/grubmaster-handlebars/views/restaurant-has-cuisines.hbs
+++ b/grubmaster-handlebars/views/restaurant-has-cuisines.hbs
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="navbar-header">
             {{!-- <button class="btn btn-outline-primary" onClick="redirectHome()">Homepage</a></button> | <button class="nav-link btn btn-outline-primary" onClick="redirectRestaurants()">Restaurants</button> | <button class="btn btn-outline-primary" href="/cuisines">Cuisines</button> | <button class="btn btn-outline-primary" href="/cities">Cities</button> | <button class="btn btn-outline-primary" href="/users">Users</button> | <button class="btn btn-outline-primary" href="/reviews">Reviews</button> | <button class="btn btn-outline-primary" href="/restaurant_has_cuisines">Restaurants' Cuisines</button> --}}
-            [ <a href="/">Homepage</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant_has_cuisines">Restaurants' Cuisines</a> ]
+            [ <a href="/">Homepage</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant-has-cuisines">Restaurants' Cuisines</a> ]
         </div>
     </div>
 </nav>
@@ -46,6 +46,8 @@
             <th class="header" scope="col">Restaurant Cuisine ID</th>
             <th class="header" scope="col">Restaurant</th>
             <th class="header" scope="col">Cuisine</th>
+            <th class="header" scope="col" id="actions" colspan="2">Actions</th>
+            <t
         </tr>
     </thead>
 
@@ -68,10 +70,13 @@
 
 <div id="search-restaurant-cuisine">
     <h2>Search for a Restaurants' Cuisine below.</h2>
-    <p>Search by restaurant or cuisine name using the field below. Partial names are OK too!</p>
+    <p>Search by restaurant or cuisine name using the fields below. Partial names are OK too!</p>
     <form id="search-restaurant-cuisine-form" method='GET' action='/restaurant-has-cuisines'>
-        <label for="input-restaurant-cuisine-search">Search by Restaurant or Cuisine Name: </label>
-        <input type="text" name="input-restaurant-cuisine-search" id="input-restaurant-cuisine-search">
+        <label for="input-rc-restaurant-search">Search by Restaurant Name: </label>
+        <input type="text" name="rc_restaurantSearch" id="input-rc-restaurant-search">
+
+        <label for="input-rc-cuisine-search">Search by Cuisine Name: </label>
+        <input type="text" name="rc_cuisineSearch" id="input-rc-cuisine-search">
         
         <input type="submit">
         <a href="/restaurant-has-cuisines"><button>Reset</button></a>
