--- a/grubmaster-handlebars/views/restaurants.hbs
+++ b/grubmaster-handlebars/views/restaurants.hbs
@@ -162,6 +162,7 @@
 <h2>Update a Restaurant's Details:</h2>
 <p>To update a specific restaurant's details, select their ID from the dropdown menu on the left and enter the desired new name, website, email, or city from the dropdown menu on the right.</p>
 <p><small>Note: * indicates a required field.</small></p>
+<p><small>Please refresh the page after seeing the entry.</small></p>
 <form id="update-restaurant-form-ajax">
 
     <label for="selectedRestaurant">* Select a Restaurant ID</label>
