Some small updates to app.js

--- a/views/users.hbs
+++ b/views/users.hbs
@@ -1,4 +1,5 @@
 <!-- users.hbs -->
+<!--  Written baesd on the github guide for the course -->
 
 [ <a href="/">Home</a> | <a href="/restaurants">Restaurants</a> | <a href="/users">Users</a> | <a href="/cities">Cities</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant_has_cuisines">Restaurants' Cuisines</a>]
 
