--- a/views/users.hbs
+++ b/views/users.hbs
@@ -22,7 +22,6 @@
 
 {{!-- Create a table --}}
 <table id="users-table">
-
     {{!-- Header section --}}
     <thead>
         <tr id="headers">
@@ -32,7 +31,6 @@
             <th class="header" scope="col">E-mail Address</th>
             <th class="header" scope="col">City</th>
             <th class="header" scope="col" colspan="2">Actions</th>
-
         </tr>
     </thead>
 
@@ -56,6 +54,8 @@
     </tbody>
 </table>
 
+<script src="./js/delete_user.js"></script>
+
 <h2>Add a User</h2>
 <p>Add a new user to the database.</p>
 <div id="insert" style="display: block">
@@ -73,10 +73,11 @@
                     {{/each}}
                 </select>
     </fieldset>
-        <input class="btn" type="submit" id="add-user-form-ajax" value="Add User">
-        <input class="btn" type="button" value="Cancel" onClick="browseUsers()">
+        <input type="submit" id="add-user-form-ajax" value="Add User">
 </form> 
 </div><!-- Add New User -->
+
+<script src="./js/add_user.js"></script>
 
 <p>&nbsp;</p>
 <h2>Update A User's Information</h2>
@@ -91,7 +92,7 @@
                 <option value="{{this.user_id}}">{{this.user_id}}</option>
                 {{/each}}
             </select>             
-        <label>First Name*</label> <input type="text" name="first_name" id="update_first_name">
+        <label>First Name*</label> <input type="text" name="first_name" id="update_first_name" value="First Name">
         <label>Last Name*</label> <input type="text" name="last_name" id="update_last_name">
         <label>E-mail Address*</label> <input type="text" name="email_address" id="update_email_address">
         <label>City*</label> 
@@ -102,231 +103,8 @@
                 {{/each}}
             </select>
     </fieldset>
-    <input class="btn" type="submit" id="add-user-form-ajax" value="Update User">
+    <input type="submit" id="update-user-form-ajax" value="Update User">
 </form><!-- Update User -->
 
-<script>
-// Add user
-// Get the objects we need to modify
-let addUserForm = document.getElementById('add-user-form-ajax');
-
-// Modify the objects we need
-addUserForm.addEventListener("submit", function (e) {
-    
-    // Prevent the form from submitting
-    e.preventDefault();
-
-    // Get form fields we need to get data from
-    let inputFirstName = document.getElementById("first_name");
-    let inputLastName = document.getElementById("last_name");
-    let inputEmailAddress = document.getElementById("email_address");
-    let inputCity = document.getElementById("city");
-
-    // Get the values from the form fields
-    let firstNameValue = inputFirstName.value;
-    let lastNameValue = inputLastName.value;
-    let emailAddressValue = inputEmailAddress.value;
-    let cityValue = inputCity.value;
-
-    // Put our data we want to send in a javascript object
-    let data = {
-        user_first_name: firstNameValue,
-        user_last_name: lastNameValue,
-        user_email: emailAddressValue,
-        user_city_id: cityValue
-    }
-    
-    // Setup our AJAX request
-    var xhttp = new XMLHttpRequest();
-    xhttp.open("POST", "/add-user-ajax", true);
-    xhttp.setRequestHeader("Content-type", "application/json");
-
-    // Tell our AJAX request how to resolve
-    xhttp.onreadystatechange = () => {
-        if (xhttp.readyState == 4 && xhttp.status == 200) {
-
-            // Add the new data to the table
-            addRowToTable(xhttp.response);
-
-            // Clear the input fields for another transaction
-            inputFirstName.value = '';
-            inputLastName.value = '';
-            inputEmailAddress.value = '';
-            inputCity.value = '';
-        }
-        else if (xhttp.readyState == 4 && xhttp.status != 200) {
-            console.log("There was an error with the input.")
-        }
-    }
-
-    // Send the request and wait for the response
-    xhttp.send(JSON.stringify(data));
-
-})
-
-// Creates a single row from an Object representing a single record from 
-// Users
-addRowToTable = (data) => {
-
-    // Get a reference to the current table on the page and clear it out.
-    let currentTable = document.getElementById("users-table");
-
-    // Get the location where we should insert the new row (end of table)
-    let newRowIndex = currentTable.rows.length;
-
-    // Get a reference to the new row from the database query (last object)
-    let parsedData = JSON.parse(data);
-    let newRow = parsedData[parsedData.length - 1]
-
-    // Create a row
-    let row = document.createElement("TR");
-    let idCell = document.createElement("TD");
-    let firstNameCell = document.createElement("TD");
-    let lastNameCell = document.createElement("TD");
-    let emailAddressCell = document.createElement("TD");
-    let cityCell = document.createElement("TD");
-
-    // Fill the cells with correct data
-    idCell.innerText = newRow.user_id;
-    firstNameCell.innerText = newRow.user_first_name;
-    lastNameCell.innerText = newRow.user_last_name;
-    emailAddressCell.innerText = newRow.user_email;
-    cityCell.innerText = newRow.address_city;
-
-    // Add the cells to the row 
-    row.appendChild(idCell);
-    row.appendChild(firstNameCell);
-    row.appendChild(lastNameCell);
-    row.appendChild(emailAddressCell);
-    row.appendChild(cityCell);
-    
-    // Add the row to the table
-    currentTable.appendChild(row);
-}
-
-// delete a user
-function deleteUser(user_id) {
-    // Put our data we want to send in a javascript object
-    let data = {
-        id: user_id
-    };
-
-    // Setup our AJAX request
-    var xhttp = new XMLHttpRequest();
-    xhttp.open("DELETE", "/delete-user-ajax", true);
-    xhttp.setRequestHeader("Content-type", "application/json");
-
-    // Tell our AJAX request how to resolve
-    xhttp.onreadystatechange = () => {
-        if (xhttp.readyState == 4 && xhttp.status == 204) {
-
-            // Add the new data to the table
-            deleteRow(user_id);
-
-        }
-        else if (xhttp.readyState == 4 && xhttp.status != 204) {
-            console.log("There was an error with the input.")
-        }
-    }
-    // Send the request and wait for the response
-    xhttp.send(JSON.stringify(data));
-}
-
-function deleteRow(user_id){
-
-    let table = document.getElementById("users-table");
-    for (let i = 0, row; row = table.rows[i]; i++) {
-       //iterate through rows
-       //rows would be accessed using the "row" variable assigned in the for loop
-       if (table.rows[i].getAttribute("data-value") == user_id) {
-            table.deleteRow(i);
-            break;
-       }
-    }
-}
-
-// Update User
-// Get the objects we need to modify
-let updateUserForm = document.getElementById('update-user-form-ajax');
-
-// Modify the objects we need
-updateUserForm.addEventListener("submit", function (e) {
-   
-    // Prevent the form from submitting
-    e.preventDefault();
-
-    // Get form fields we need to get data from
-    let selectedUserId = document.getElementById("selected_user_id");
-    let updateFirstName = document.getElementById("update_first_name");
-    let updateLastName = document.getElementById("update_last_name");
-    let updateEmailAddress = document.getElementById("update_email_address");
-    let updateCity = document.getElementById("update_city");
-
-    // Get the values from the form fields
-    let userIdValue = selectedUserId.value;
-    let firstNameValue = updateFirstName.value;
-    let lastNameValue = updateLastName.value;
-    let emailAddressValue = updateEmailAddress.value;
-    let cityValue = updateCity.value;
-
-    // currently the database table for Users does not allow updating values to NULL
-    // so we must abort if being passed NULL for Cities -- check on other values
-
-
-
-    // Put our data we want to send in a javascript object
-    let data = {
-        user_id: userIdValue,
-        user_first_name: firstNameValue,
-        user_last_name: lastNameValue,
-        user_email: emailAddressValue,
-        user_city_id: cityValue,
-    }
-    
-    // Setup our AJAX request
-    var xhttp = new XMLHttpRequest();
-    xhttp.open("PUT", "/put-user-ajax", true);
-    xhttp.setRequestHeader("Content-type", "application/json");
-
-    // Tell our AJAX request how to resolve
-    xhttp.onreadystatechange = () => {
-        if (xhttp.readyState == 4 && xhttp.status == 200) {
-
-            // Add the new data to the table
-            updateRow(xhttp.response, userIdValue);
-
-        }
-        else if (xhttp.readyState == 4 && xhttp.status != 200) {
-            console.log("There was an error with the input.")
-        }
-    }
-
-    // Send the request and wait for the response
-    xhttp.send(JSON.stringify(data));
-
-})
-
-function updateRow(data, selected_user_id){
-    let parsedData = JSON.parse(data);
-    
-    let table = document.getElementById("users-table");
-
-    for (let i = 0, row; row = table.rows[i]; i++) {
-       //iterate through rows
-       //rows would be accessed using the "row" variable assigned in the for loop
-       if (table.rows[i].getAttribute("data-value") == selected_user_id) {
-
-            // Get the location of the row where we found the matching person ID
-            let updateRowIndex = table.getElementsByTagName("tr")[i];
-
-            // Get td of homeworld value
-            let td = updateRowIndex.getElementsByTagName("td")[4];
-
-            // Reassign homeworld to our value we updated to
-            td.innerHTML = parsedData[0].city_name; 
-       }
-    }
-}
-</script>
-
+<script src="./js/update_user.js"></script>
 
