added new files

--- a/grubmaster-handlebars/views/home.hbs
+++ b/grubmaster-handlebars/views/home.hbs
@@ -1,5 +1,7 @@
 <h1 align="center"><strong>Grubmaster</strong></h1>
 
+<small>Grubmaster is a new web application that strives to connect consumers/foodies with local restaurants throughout the United States. Through the Grubmaster application, Users can search for Restaurants by their City, Cuisine, rating, and leave Reviews for restaurants, and Restaurants can request to list their details on the platform. Grubmaster currently has 50 restaurants listed in each of the following cities: Portland, Seattle, San Francisco, and Los Angeles that currently serves 100 users. A database-driven website will allow Grubmaster to more efficiently track restaurant details and user engagement. Specifically, user engagement will be tracked by the number of reviews currently on the platform and the number of reviews associated with each user, with the goal of each user leaving at least one review for a restaurant of their choice. </small>
+
 <nav class="navbar navbar-inverse center" align="center"> 
     <div class="container">
         <div class="navbar-header">
@@ -21,12 +23,14 @@
             <p><a href="/reviews">
                 <button class="btn btn-outline-primary">Reviews</button>
             </a></p>
-            <p><a href="/restaurant-has-cuisines">
+            <p><a href="/restaurant_has_cuisines">
                 <button class="btn btn-outline-primary">Restaurants' Cuisines</button>
             </a></p>
             {{!-- <button class="btn btn-outline-primary" onClick="redirectHome()">Homepage</a></button> | <button class="nav-link btn btn-outline-primary" onClick="redirectRestaurants()">Restaurants</button> | <button class="btn btn-outline-primary" href="/cuisines">Cuisines</button> | <button class="btn btn-outline-primary" href="/cities">Cities</button> | <button class="btn btn-outline-primary" href="/users">Users</button> | <button class="btn btn-outline-primary" href="/reviews">Reviews</button> | <button class="btn btn-outline-primary" href="/restaurant_has_cuisines">Restaurants' Cuisines</button> --}}
-            [ <a href="/">Homepage</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant-has-cuisines">Restaurants' Cuisines</a> ]
+            {{!-- [ <a href="/">Homepage</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant_has_cuisines">Restaurants' Cuisines</a> ] --}}
         </div>
     </div>
 </nav>
 </body>
+</div>
+
