--- a/grubmaster-handlebars/views/restaurants.hbs
+++ b/grubmaster-handlebars/views/restaurants.hbs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <head>
     <meta charset="utf-8">
     <title>Restaurants List</title>
@@ -10,8 +9,10 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 
-<body>
-<script src="./js/delete_restaurant.js"></script> 
+<script language="Javascript" src='./js/restaurants_ShowHideCRUD.js'></script>
+
+<body onload='browseRestaurants()'>
+<script src="./js/restaurants_delete.js"></script> 
 
 {{!-- The Data from our database --}}
 
@@ -23,7 +24,7 @@
     <div class="container">
         <div class="navbar-header">
             {{!-- <button class="btn btn-outline-primary" onClick="redirectHome()">Homepage</a></button> | <button class="nav-link btn btn-outline-primary" onClick="redirectRestaurants()">Restaurants</button> | <button class="btn btn-outline-primary" href="/cuisines">Cuisines</button> | <button class="btn btn-outline-primary" href="/cities">Cities</button> | <button class="btn btn-outline-primary" href="/users">Users</button> | <button class="btn btn-outline-primary" href="/reviews">Reviews</button> | <button class="btn btn-outline-primary" href="/restaurant_has_cuisines">Restaurants' Cuisines</button> --}}
-            [ <a href="/">Homepage</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant-has-cuisines">Restaurants' Cuisines</a> ]
+            [ <a href="/">Home</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant_has_cuisines">Restaurants' Cuisines</a> ]
         </div>
     </div>
 </nav>
@@ -45,6 +46,9 @@
 </div>   --}}
 
 <div id="browse-restaurants">
+    <p><button href="restaurants/add-restaurant" onClick="newRestaurant()">Add a New Restaurant</button></p>
+    <p><button href="restaurants/update-restaurant" onClick="updateRestaurant()">Update a Restaurant</button></p>
+    
     <table id="restaurants-table" 
     class="table table-striped table-bordered table-hover" 
     align="center"
@@ -62,7 +66,7 @@
             <th class="header" scope="col">Website</th>
             <th class="header" scope="col">Email</th>
             <th class="header" scope="col">City</th>
-            <th class="header" scope="col" id="actions" colspan="2">Actions</th>
+            <th class="header" scope="col" id="delete">Delete</th>
         </tr>
     </thead>
 
@@ -70,30 +74,32 @@
     <tbody>
         {{#each data}}
         <tr align="center" data-value={{this.restaurant_id}}>
-            <td>{{this.restaurant_id}}</td>
-            <td>{{this.restaurant_name}}</td>
+            <td id='restaurant_id'>{{this.restaurant_id}}</td>
+            <td id="restaurant_name">{{this.restaurant_name}}</td>
             {{#if this.restaurant_website}}
-                <td>{{this.restaurant_website}}</td>
+                <td id='restaurant_website'>{{this.restaurant_website}}</td>
             {{else}}
-                <td>NULL</td>
+                <td id='restaurant_website'>NULL</td>
             {{/if}}
             {{#if this.restaurant_email}}
-                <td>{{this.restaurant_email}}</td>
+                <td id='restaurant_email'>{{this.restaurant_email}}</td>
             {{else}}
-                <td>NULL</td>
+                <td id='restaurant_email'>NULL</td>
             {{/if}}
-            <td>{{this.city}}</td>
-            <td><button onClick="/">Edit</button></td>
-            <td><button onClick="deleteRestaurant({{this.restaurant_id}})">Delete</button></td>
+            <td id='restaurant_city'>{{this.city}}</td>
+
+            {{!-- <td><button id="edit_button" onClick="updateRestaurant({{this.restaurant_id}});">Edit</button></td> --}}
+            <td><button onClick="if (confirm('Are you sure you wish to delete this entry?') === true) {deleteRestaurant({{this.restaurant_id}})}">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
     </table>
-{{!-- <script src="./js/update_restaurant.js"></script> --}}
+
 </div>
+
 <p>&nbsp;</p>
 
-<div id="search-restaurant">
+<div id="search-restaurant" style="display: block">
     <h2>Search for a Restaurant below.</h2>
     <p>Search by restaurant name using the field below. Partial names are OK too!</p>
     <form id="search-restaurant-form" method='GET' action='/restaurants'>
@@ -101,16 +107,17 @@
         <input type="text" name="restaurant_name" id="input-restaurant-name-search">
         
         <input type="submit">
-        <a href="/restaurants"><button>Reset</button></a>
+        <a href="/restaurants"><input type="button" value="Reset"></a>
     </form>
 </div>
 <p>&nbsp;</p>
 
 {{!-- Add data using AJAX --}}
-<div id="add-restaurant">
+<div id="add-restaurant" style="display: block">
     <h2>Add a new restaurant: </h2>
     <p>To add a new restaurant, please enter the information below and click 'Submit'! </p> 
     <p><small>Note: * indicates a required field.</small></p>
+
     <form id="add-restaurant-form-ajax">
         <p><label for="input-restaurant-name">* Restaurant Name: </label>
         <input type="text" name="input-restaurant-name" id="input-restaurant-name" placeholder="*Name"></p>
@@ -128,59 +135,68 @@
             <option value="{{this.city_id}}">{{this.city_name}}</option>
             {{/each}}
         </select></p>
+
+        <span id="add-rest-error"><span>
         <input type="submit">
+        <input type="button" value="Cancel" onClick="browseRestaurants()"></p>
 
     </form>
 
-    {{!-- <form id="add-restaurant-form" method="POST" action="/add-restaurant-form">
-        <label for="input-restaurant-name">Restaurant Name:</label>
-        <input type="text" name="input-restaurant-name" id="input-restaurant-name"> 
+<script src="./js/restaurants_insert.js"></script>
 
-        <label for="input-restaurant-website">Restaurant Website:</label>
-        <input type="text" name="input-restaurant-website" id="input-restaurant-website">
 
-        <label for="input-restaurant-email">Restaurant Email:</label>
-        <input type="text" name="input-restaurant-email" id="input-restaurant-email">
+{{!-- Add restaurant using HTML --}}
+    {{!-- <form id="add-restaurant-form" method="POST" action="/restaurants/add-restaurant-form">
+        <p><label for="input-restaurant-name">* Restaurant Name:</label>
+        <input type="text" name="input-restaurant-name" id="input-restaurant-name"></p> 
 
-        <p><label>City: </label><select name="input-restaurant-city" id="input-restaurant-city">
+        <p><label for="input-restaurant-website">Restaurant Website:</label>
+        <input type="text" name="input-restaurant-website" id="input-restaurant-website"></p>
+
+        <p><label for="input-restaurant-email">Restaurant Email:</label>
+        <input type="text" name="input-restaurant-email" id="input-restaurant-email"></p>
+
+        <p><label>* Restaurant City: &nbsp;</label><select name="input-restaurant-city" id="input-restaurant-city">
             <option value="">Select a City</option>
             {{#each cities}}
             <option value="{{this.city_id}}">{{this.city_name}}</option>
             {{/each}}
         </select></p>
 
-        <input type="submit">
+        <span id="error"></span>
+        <p><input type="submit" id="addRestaurant" value="Submit" onClick="validateRestaurantEntry();">
+        <input type="button" value="Cancel" onClick="browseRestaurants()"></p>
         
     </form> --}}
 </div>
 
-<script src="./js/add_restaurant.js"></script>
-
 <p>&nbsp;</p>
 
-<div id="update-restaurant">
+<div id="update-restaurant" style="display: block">
 <h2>Update a Restaurant's Details:</h2>
 <p>To update a specific restaurant's details, select their ID from the dropdown menu on the left and enter the desired new name, website, email, or city from the dropdown menu on the right.</p>
 <p><small>Note: * indicates a required field.</small></p>
-<p><small>Please refresh the page after seeing the entry.</small></p>
 <form id="update-restaurant-form-ajax">
 
     <label for="selectedRestaurant">* Select a Restaurant ID</label>
     <select name="selectedRestaurant" id="selectedRestaurant">
         <option value="">Restaurant ID</option>
         {{#each data}}
-        <option value="{{this.restaurant_id}}">{{this.restaurant_id}}</option>
+        <option value="{{this.restaurant_id}}" onChange="updateRestaurantEntry({{this.restaurant_id}})">{{this.restaurant_id}}</option>
         {{/each}}
     </select>
+
+    {{!-- <p><label for="selectedRestaurant">Restaurant ID: &nbsp;</label> 
+    <input type="text" id="selectedRestaurant"> --}}
 
     <p><label for="update-restaurant-name" autocomplete="on">* Restaurant Name: </label>
     <input type="text" name="update-restaurant-name" id="update-restaurant-name"></p>
 
     <p><label for="update-restaurant-website" autocomplete="on">Restaurant Website: </label>
-    <input type="text" name="update-restaurant-website" id="update-restaurant-website" value="{{restaurant_website}}"></p>
+    <input type="text" name="update-restaurant-website" id="update-restaurant-website"></p>
 
     <p><label for="update-restaurant-name" autocomplete="on">Restaurant Email: </label>
-    <input type="text" name="update-restaurant-email" id="update-restaurant-email" value="{{data.restaurant_email}}"></p>
+    <input type="text" name="update-restaurant-email" id="update-restaurant-email" ></p>
 
     <p><label for="update-restaurant-city">* Restaurant City: </label> 
     <select name="update-restaurant-city" id="update-restaurant-city">
@@ -190,7 +206,10 @@
         {{/each}}
     </select></p>
 
-    <input type="submit">
+    <span id="edit-rest-error"></span>
+
+    <p><input type="submit">
+    <input type="button" value="Cancel" onClick="browseRestaurants()"></p>
 
 </form>
 
@@ -208,7 +227,9 @@
 </form> --}}
 </div>
 
-<script src="./js/update_restaurant.js"></script> 
+<script src="./js/restaurants_update.js"></script> 
+
+<p>&nbsp;</p>
 
 </body> 
 </html>
