--- a/grubmaster-handlebars/views/cities.hbs
+++ b/grubmaster-handlebars/views/cities.hbs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <head>
     <meta charset="utf-8">
     <title>Cities List</title>
@@ -10,7 +9,9 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 
-<body>
+<script language="Javascript" src='./js/cities_ShowHideCRUD.js'></script>
+
+<body onload='browseCities()'>
 
 {{!-- The Data from our database --}}
 
@@ -22,20 +23,18 @@
     <div class="container">
         <div class="navbar-header">
             {{!-- <button class="btn btn-outline-primary" onClick="redirectHome()">Homepage</a></button> | <button class="nav-link btn btn-outline-primary" onClick="redirectRestaurants()">Restaurants</button> | <button class="btn btn-outline-primary" href="/cuisines">Cuisines</button> | <button class="btn btn-outline-primary" href="/cities">Cities</button> | <button class="btn btn-outline-primary" href="/users">Users</button> | <button class="btn btn-outline-primary" href="/reviews">Reviews</button> | <button class="btn btn-outline-primary" href="/restaurant_has_cuisines">Restaurants' Cuisines</button> --}}
-            [ <a href="/">Homepage</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant-has-cuisines">Restaurants' Cuisines</a> ]
+            [ <a href="/">Home</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant_has_cuisines">Restaurants' Cuisines</a> ]
         </div>
     </div>
 </nav>
+
 </div>
 <p>&nbsp;</p>
 
-{{!-- <div id="search">
-    <form class="p-1 mb-1 bg-light border-bottom">
-      <input type="text" id="searchRestaurantInput" class="form-control" autocomplete="false" placeholder="Search for a restaurant...">
-    </form>
-</div>   --}}
-
 <div id="browse-cities">
+    <p><button href="cities/add-city" onClick="newCity()">Add a New City</button> &nbsp;
+    <button href="cities/update-city" onClick="updateCity()">Update a City</button></p>
+    
     <table id="cities-table" 
     class="table table-striped table-bordered table-hover" 
     align="center"
@@ -50,7 +49,6 @@
         <tr id="headers">
             <th class="header" scope="col">ID</th>
             <th class="header" scope="col">City Name</th>
-            <th class="header" scope="col" id="actions" colspan="2">Action(s)</th>
         </tr>
     </thead>
 
@@ -58,9 +56,8 @@
     <tbody>
         {{#each data}}
         <tr align="center" data-value={{this.city_id}}>
-            <td>{{this.city_id}}</td>
-            <td>{{this.city_name}}</td>
-            {{!-- <td><button onClick="/">Edit</button></td> --}}
+            <td id="city_id">{{this.city_id}}</td>
+            <td id="city_name">{{this.city_name}}</td>
         </tr>
         {{/each}}
     </tbody>
@@ -69,39 +66,43 @@
 </div>
 <p>&nbsp;</p>
 
-<div id="search-city">
+<div id="search-city" style="display: block">
     <h2>Search for a City below.</h2>
-    <p>Search by city name using the field below. Partial names are OK too!</p>
+    <p>Search by City name using the field below. Partial names are OK too!</p>
     <form id="search-city-form" method='GET' action='/cities'>
         <label for="input-city-name">Search by City Name: </label>
         <input type="text" name="city_name" id="input-city-name-search">
         
         <input type="submit">
-        <a href="/cities"><button>Reset</button></a>
+        <a href="/cities"><input type="button" value="Reset"></a>
     </form>
 </div>
 <p>&nbsp;</p>
 
 {{!-- Add data using AJAX --}}
-<div id="add-city">
-    <h2>Add a new cuisine city: </h2>
-    <p>To add a new city, please enter the information below and click 'Submit'! </p>
+<div id="add-city" style="display: block">
+    <h2>Add a new city: </h2>
+    <p>To add a new city, please enter the information below and click 'Submit'! </p> 
     <p><small>Note: * indicates a required field.</small></p>
+
     <form id="add-city-form-ajax">
         <p><label for="input-city-name">* City Name: </label>
         <input type="text" name="input-city-name" id="input-city-name" placeholder="*Name"></p>
+
+        <span id="add-city-error"><span>
         <input type="submit">
+        <input type="button" value="Cancel" onClick="browseCities()"></p>
 
     </form>
 </div>
 
-<script src="./js/add_city.js"></script>
+<script src="./js/cities_insert.js"></script>
 
 <p>&nbsp;</p>
 
-<div id="update-city">
+<div id="update-city" style="display: block">
 <h2>Update a City's Details:</h2>
-<p>To update a specific city's details, select their ID from the dropdown menu on the left and enter the desired new name.</p>
+<p>To update a specific city's details, select their ID from the dropdown menu then entire the desired new name.</p>
 <p><small>Note: * indicates a required field.</small></p>
 <form id="update-city-form-ajax">
 
@@ -115,13 +116,17 @@
 
     <p><label for="update-city-name" autocomplete="on">* City Name: </label>
     <input type="text" name="update-city-name" id="update-city-name"></p>
+    <span id="edit-city-error"></span>
 
-    <input type="submit">
+    <p><input type="submit">
+    <input type="button" value="Cancel" onClick="browseCities()"></p>
 
 </form>
 </div>
 
-</div>
+<script src="./js/cities_update.js"></script>
+
+<p>&nbsp;</p>
 
 </body> 
 </html>
