--- a/grubmaster-handlebars/views/restaurant_has_cuisines.hbs
+++ b/grubmaster-handlebars/views/restaurant_has_cuisines.hbs
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 
-<body>
+<script language="Javascript" src="./js/restaurantHasCuisines_ShowHideCRUD.js"></script>
+
+<body onload='browseRestaurantCuisines()'>
 
 {{!-- The Data from our database --}}
 
