updated all files

--- a/views/reviews.hbs
+++ b/views/reviews.hbs
@@ -11,14 +11,14 @@
     <link rel="stylesheet" href="/css/style.css" type="text/css"/>
 </head>
 
-<h2>Search Reviews</h2>
+{{!-- <h2>Search Reviews</h2>
 <form id="search-review-html" method='GET' action='/reviews'>
     <label for="input-lname">Search by Restaurant Name: </label>
     <input type="text" name="review_restaurant_name" id="input-restaurant-name-html-search">
     <input type="submit">
     <a href='/reviews'><button>Reset</button></a>
 </form>
-<p>&nbsp;</p>
+<p>&nbsp;</p> --}}
 
 {{!-- Create a table --}}
 <table id="reviews-table">
