--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,14 @@
-/* .table {
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: auto;  */
+body {
+  padding-top: 10px; 
+  padding-right: 200px; 
+  padding-left: 200px;
+  margin: auto;
+  align-content: center; 
+  background-color: #E2D2C1;
+}
 
 /* Default Table Style */
-.table {
+table {
     table-layout: auto;
     display: table; 
     justify-content: center;
@@ -26,7 +28,7 @@ thead {
     background: red;
 }
 
-/* tr:hover {background-color: lightskyblue;} */
+tr:hover {background-color: lightgrey;}
 
 table th,
 table td {
@@ -38,49 +40,18 @@ h1 {
   color: black;
 }
 
-.center {
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-}
-
-#search-restaurant {
+.form-fields {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   padding: 10px;
   border: 2px solid #333;
   margin: auto;
-  width: 50%;
   padding: 10px;
   top: 30px;
-}
-
-#add-restaurant {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 12pt;
-  border: 2px solid #333;
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-  top: 30px;
-}
-
-#update-restaurant {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 12pt;
-  border: 2px solid #333;
-  margin: auto;
-  width: 50%;
-  padding: 10px;
-  top: 30px;
+  width: 80%
 }
 
 body {
   align-self: center;
-}
-
-#top {
-  background-color: lightcyan;
-  padding: 50px;
 }
 
 /* Zebra Table Style */
