--- a/views/cities.hbs
+++ b/views/cities.hbs
@@ -19,21 +19,30 @@
 <div id="top">
 <h1 align="center">Cities</h1>
 
-<nav class="navbar navbar-inverse center"> 
-    <div class="container">
-        <div class="navbar-header">
-            {{!-- <button class="btn btn-outline-primary" onClick="redirectHome()">Homepage</a></button> | <button class="nav-link btn btn-outline-primary" onClick="redirectRestaurants()">Restaurants</button> | <button class="btn btn-outline-primary" href="/cuisines">Cuisines</button> | <button class="btn btn-outline-primary" href="/cities">Cities</button> | <button class="btn btn-outline-primary" href="/users">Users</button> | <button class="btn btn-outline-primary" href="/reviews">Reviews</button> | <button class="btn btn-outline-primary" href="/restaurant_has_cuisines">Restaurants' Cuisines</button> --}}
-            [ <a href="/">Home</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant-has-cuisines">Restaurants' Cuisines</a> ]
-        </div>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <a class="navbar-brand" href="/">Grubmaster</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="/">Home<span class="sr-only"></span></a>
+      <a class="nav-item nav-link" href="/restaurants">Restaurants</a>
+      <a class="nav-item nav-link" href="/cuisines">Cuisines</a>
+      <a class="nav-item nav-link active" href="/cities">Cities</a>
+      <a class="nav-item nav-link" href="/users">Users</a>
+      <a class="nav-item nav-link" href="/reviews">Reviews</a>
+      <a class="nav-item nav-link" href="/restaurant_has_cuisines">Restaurants' Cuisines</a>
     </div>
+
+  </div>
 </nav>
 
 </div>
 <p>&nbsp;</p>
 
 <div id="browse-cities">
-    <p><button href="cities/add-city" onClick="newCity()">Add a New City</button> &nbsp;
-    <button href="cities/update-city" onClick="updateCity()">Update a City</button></p>
+   <p><button type="button" class="btn btn-primary" href="cities/add-city" onClick="newCity()">Add a New City</button></p>
     
     <table id="cities-table" 
     class="table table-striped table-bordered table-hover" 
@@ -49,6 +58,7 @@
         <tr id="headers">
             <th class="header" scope="col">ID</th>
             <th class="header" scope="col">City Name</th>
+            <th class="header" scope="col">Edit</th>
         </tr>
     </thead>
 
@@ -58,6 +68,7 @@
         <tr align="center" data-value={{this.city_id}}>
             <td id="city_id">{{this.city_id}}</td>
             <td id="city_name">{{this.city_name}}</td>
+            <td><a href="/cities/edit_city.html/{{this.city_id}}" class="btn btn-warning active" role="button" aria-pressed="true">Edit</a></td>
         </tr>
         {{/each}}
     </tbody>
@@ -66,67 +77,52 @@
 </div>
 <p>&nbsp;</p>
 
-<div id="search-city" style="display: block">
+<div class="form-fields" id="search-city" style="display: block">
     <h2>Search for a City below.</h2>
     <p>Search by City name using the field below. Partial names are OK too!</p>
     <form id="search-city-form" method='GET' action='/cities'>
         <label for="input-city-name">Search by City Name: </label>
         <input type="text" name="city_name" id="input-city-name-search">
         
-        <input type="submit">
+        <input type="submit" value="Search">
         <a href="/cities"><input type="button" value="Reset"></a>
     </form>
 </div>
 <p>&nbsp;</p>
 
-{{!-- Add data using AJAX --}}
-<div id="add-city" style="display: block">
+<div class="form-fields" id="add-city">
     <h2>Add a new city: </h2>
     <p>To add a new city, please enter the information below and click 'Submit'! </p> 
     <p><small>Note: * indicates a required field.</small></p>
 
-    <form id="add-city-form-ajax">
-        <p><label for="input-city-name">* City Name: </label>
-        <input type="text" name="input-city-name" id="input-city-name" placeholder="*Name"></p>
+    <form id="add-city-form" method="POST" action="/cities/add-city-form">
+        <p><label for="input-restaurant-city">* City Name:</label>
+        <input type="text" name="input-city-name" id="input-city-name" required></p> 
 
-        <span id="add-city-error"><span>
-        <input type="submit">
-        <input type="button" value="Cancel" onClick="browseCities()"></p>
-
+        <p><input type="submit" id="addCity" value="Submit" onClick="return validateForm();" class="btn btn-primary"> 
+        <input type="button" value="Cancel" onClick="browseCities()" class="btn btn-secondary"></p>
+        
     </form>
 </div>
 
-<script src="./js/cities_insert.js"></script>
-
 <p>&nbsp;</p>
 
-<div id="update-city" style="display: block">
-<h2>Update a City's Details:</h2>
-<p>To update a specific city's details, select their ID from the dropdown menu then entire the desired new name.</p>
-<p><small>Note: * indicates a required field.</small></p>
-<form id="update-city-form-ajax">
-
-    <label for="selectedCity">* Select a City ID</label>
-    <select name="selectedCity" id="selectedCity">
-        <option value="">City ID</option>
-        {{#each data}}
-        <option value="{{this.city_id}}">{{this.city_id}}</option>
-        {{/each}}
-    </select>
-
-    <p><label for="update-city-name" autocomplete="on">* City Name: </label>
-    <input type="text" name="update-city-name" id="update-city-name"></p>
-    <span id="edit-city-error"></span>
-
-    <p><input type="submit">
-    <input type="button" value="Cancel" onClick="browseCities()"></p>
-
-</form>
-</div>
-
-<script src="./js/cities_update.js"></script>
-
-<p>&nbsp;</p>
+<script>
+    function validateForm() {
+        let requiredFields = document.getElementById('add-city-form')
+            .querySelectorAll('[required]')
+        let valid = []; 
+        requiredFields.forEach((element) => {
+            if (element.value !== "") {
+                valid.push(true)
+            } else {valid.push(false)}
+        })
+        let checker = arr => arr.every(v => v === true); 
+        if (checker(valid)) {
+            alert('Successfully added new city!')
+        }
+    }
+</script>
 
 </body> 
 </html>
