--- a/views/cuisines.hbs
+++ b/views/cuisines.hbs
@@ -19,21 +19,30 @@
 <div id="top">
 <h1 align="center">Cuisines</h1>
 
-<nav class="navbar navbar-inverse center"> 
-    <div class="container">
-        <div class="navbar-header">
-            {{!-- <button class="btn btn-outline-primary" onClick="redirectHome()">Homepage</a></button> | <button class="nav-link btn btn-outline-primary" onClick="redirectRestaurants()">Restaurants</button> | <button class="btn btn-outline-primary" href="/cuisines">Cuisines</button> | <button class="btn btn-outline-primary" href="/cities">Cities</button> | <button class="btn btn-outline-primary" href="/users">Users</button> | <button class="btn btn-outline-primary" href="/reviews">Reviews</button> | <button class="btn btn-outline-primary" href="/restaurant_has_cuisines">Restaurants' Cuisines</button> --}}
-            [ <a href="/">Home</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant-has-cuisines">Restaurants' Cuisines</a> ]
-        </div>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <a class="navbar-brand" href="/">Grubmaster</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="/">Home<span class="sr-only"></span></a>
+      <a class="nav-item nav-link" href="/restaurants">Restaurants</a>
+      <a class="nav-item nav-link active" href="/cuisines">Cuisines</a>
+      <a class="nav-item nav-link" href="/cities">Cities</a>
+      <a class="nav-item nav-link" href="/users">Users</a>
+      <a class="nav-item nav-link" href="/reviews">Reviews</a>
+      <a class="nav-item nav-link" href="/restaurant_has_cuisines">Restaurants' Cuisines</a>
     </div>
+
+  </div>
 </nav>
 
 </div>
 <p>&nbsp;</p>
 
 <div id="browse-cuisines">
-    <p><button href="cuisines/add-cuisines" onClick="newCuisine()">Add a New Cuisine</button> &nbsp;
-    <button href="cuisines/update-cuisine" onClick="updateCuisine()">Update a Cuisine</button></p>
+    <p><button type="button" class="btn btn-primary" onClick="newCuisine()">Add a New Cuisine</button></p>
     
     <table id="cuisines-table" 
     class="table table-striped table-bordered table-hover" 
@@ -49,6 +58,7 @@
         <tr id="headers">
             <th class="header" scope="col">ID</th>
             <th class="header" scope="col">Cuisine Name</th>
+            <th class="header" scope="col">Edit</th>
         </tr>
     </thead>
 
@@ -58,6 +68,7 @@
         <tr align="center" data-value={{this.cuisine_id}}>
             <td id="cuisine_id">{{this.cuisine_id}}</td>
             <td id="cuisine_name">{{this.cuisine_name}}</td>
+            <td><a href="/cuisines/edit_cuisine.html/{{this.cuisine_id}}" class="btn btn-warning active" role="button" aria-pressed="true">Edit</a></td>
         </tr>
         {{/each}}
     </tbody>
@@ -66,7 +77,7 @@
 </div>
 <p>&nbsp;</p>
 
-<div id="search-cuisine" style="display: block">
+<div class="form-fields" id="search-cuisine" style="display: block">
     <h2>Search for a Cuisine below.</h2>
     <p>Search by Cuisine name using the field below. Partial names are OK too!</p>
     <form id="search-cuisine-form" method='GET' action='/cuisines'>
@@ -79,54 +90,39 @@
 </div>
 <p>&nbsp;</p>
 
-{{!-- Add data using AJAX --}}
-<div id="add-cuisine" style="display: block">
+<div class="form-fields" id="add-cuisine">
     <h2>Add a new cuisine: </h2>
     <p>To add a new cuisine, please enter the information below and click 'Submit'! </p> 
     <p><small>Note: * indicates a required field.</small></p>
 
-    <form id="add-cuisine-form-ajax">
-        <p><label for="input-cuisine-name">* Cuisine Name: </label>
-        <input type="text" name="input-cuisine-name" id="input-cuisine-name" placeholder="*Name"></p>
+    <form id="add-cuisine-form" method="POST" action="/cities/add-cuisine-form">
+        <p><label for="input-cuisine">* Cuisine Name:</label>
+        <input type="text" name="input-cuisine-name" id="input-cuisine-name" required></p> 
 
-        <span id="add-cuisine-error"><span>
-        <input type="submit">
-        <input type="button" value="Cancel" onClick="browseCuisines()"></p>
-
+        <p><input type="submit" id="addCuisine" value="Submit" onClick="return validateForm();" class="btn btn-primary"> 
+        <input type="button" value="Cancel" onClick="browseCuisines()" class="btn btn-secondary"></p>
+        
     </form>
 </div>
 
-<script src="./js/cuisines_insert.js"></script>
-
 <p>&nbsp;</p>
 
-<div id="update-cuisine" style="display: block">
-<h2>Update a Cuisine's Details:</h2>
-<p>To update a specific cuisine's details, select their ID from the dropdown menu then entire the desired new name.</p>
-<p><small>Note: * indicates a required field.</small></p>
-<form id="update-cuisine-form-ajax">
-
-    <label for="selectedCuisine">* Select a Cuisine ID</label>
-    <select name="selectedCuisine" id="selectedCuisine">
-        <option value="">Cuisine ID</option>
-        {{#each data}}
-        <option value="{{this.cuisine_id}}">{{this.cuisine_id}}</option>
-        {{/each}}
-    </select>
-
-    <p><label for="update-cuisine-name" autocomplete="on">* Cuisine Name: </label>
-    <input type="text" name="update-cuisine-name" id="update-cuisine-name"></p>
-    <span id="edit-cuisine-error"></span>
-
-    <p><input type="submit">
-    <input type="button" value="Cancel" onClick="browseCuisines()"></p>
-
-</form>
-</div>
-
-<script src="./js/cuisines_update.js"></script>
-
-<p>&nbsp;</p>
+<script>
+    function validateForm() {
+        let requiredFields = document.getElementById('add-cuisine-form')
+            .querySelectorAll('[required]')
+        let valid = []; 
+        requiredFields.forEach((element) => {
+            if (element.value !== "") {
+                valid.push(true)
+            } else {valid.push(false)}
+        })
+        let checker = arr => arr.every(v => v === true); 
+        if (checker(valid)) {
+            alert('Successfully added new cuisine!')
+        }
+    }
+</script>
 
 </body> 
 </html>
