--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,36 +1,83 @@
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1", shrink-to-fit="yes">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"/>
+    {{!-- <link rel="stylesheet" type="text/css" href="extensions/filter-control/bootstrap-table-filter-control.css"/> --}}
+    <script type="text/javascript" src="jquery-3.5.1.min.js"> </script>
+    <link rel="stylesheet" href="/css/style.css" type="text/css"/>
+</head>
+
 <h1 align="center"><strong>Grubmaster</strong></h1>
 
-<small>Grubmaster is a new web application that strives to connect consumers/foodies with local restaurants throughout the United States. Through the Grubmaster application, Users can search for Restaurants by their City, Cuisine, rating, and leave Reviews for restaurants, and Restaurants can request to list their details on the platform. Grubmaster currently has 50 restaurants listed in each of the following cities: Portland, Seattle, San Francisco, and Los Angeles that currently serves 100 users. A database-driven website will allow Grubmaster to more efficiently track restaurant details and user engagement. Specifically, user engagement will be tracked by the number of reviews currently on the platform and the number of reviews associated with each user, with the goal of each user leaving at least one review for a restaurant of their choice. </small>
-
-<nav class="navbar navbar-inverse center" align="center"> 
-    <div class="container">
-        <div class="navbar-header">
-            <p><a href="/"> 
-                <button>Home</button>
-            </a></p> 
-            <p><a href="/restaurants">
-                <button class="btn btn-outline-primary">Restaurants</button>
-            </a></p>
-            <p><a href="/cuisines">
-                <button>Cuisines</button>
-            </a></p>
-            <p><a href="/cities">
-                <button class="btn btn-outline-primary">Cities</button>
-            </a></p>
-            <p><a href="/users">
-                <button class="btn btn-outline-primary">Users</button>
-            </a></p>
-            <p><a href="/reviews">
-                <button class="btn btn-outline-primary">Reviews</button>
-            </a></p>
-            <p><a href="/restaurant_has_cuisines">
-                <button class="btn btn-outline-primary">Restaurants' Cuisines</button>
-            </a></p>
-            {{!-- <button class="btn btn-outline-primary" onClick="redirectHome()">Homepage</a></button> | <button class="nav-link btn btn-outline-primary" onClick="redirectRestaurants()">Restaurants</button> | <button class="btn btn-outline-primary" href="/cuisines">Cuisines</button> | <button class="btn btn-outline-primary" href="/cities">Cities</button> | <button class="btn btn-outline-primary" href="/users">Users</button> | <button class="btn btn-outline-primary" href="/reviews">Reviews</button> | <button class="btn btn-outline-primary" href="/restaurant_has_cuisines">Restaurants' Cuisines</button> --}}
-            {{!-- [ <a href="/">Homepage</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant_has_cuisines">Restaurants' Cuisines</a> ] --}}
-        </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="/">Grubmaster</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="/">Home<span class="sr-only"></span></a>
+      <a class="nav-item nav-link" href="/restaurants">Restaurants</a>
+      <a class="nav-item nav-link" href="/cuisines">Cuisines</a>
+      <a class="nav-item nav-link" href="/cities">Cities</a>
+      <a class="nav-item nav-link" href="/users">Users</a>
+      <a class="nav-item nav-link" href="/reviews">Reviews</a>
+      <a class="nav-item nav-link" href="/restaurant_has_cuisines">Restaurants' Cuisines</a>
     </div>
+
+  </div>
+
 </nav>
+
+<h6>Grubmaster is a new web application that strives to connect consumers/foodies with local restaurants throughout the United States. Through the Grubmaster application, Users can search for Restaurants by their City, Cuisine, rating, and leave Reviews for restaurants, and Restaurants can request to list their details on the platform. Grubmaster currently has 50 restaurants listed in each of the following cities: Portland, Seattle, San Francisco, and Los Angeles that currently serves 100 users. A database-driven website will allow Grubmaster to more efficiently track restaurant details and user engagement. Specifically, user engagement will be tracked by the number of reviews currently on the platform and the number of reviews associated with each user, with the goal of each user leaving at least one review for a restaurant of their choice. </h6>
+
+<button type="button" class="btn btn-outline-success" id="toggle" onClick="displayInstructions()">Click to view descriptions of each page & instructions on how to use this database.</button>
+
+<p>&nbsp; </p>
+<div class="form-fields" id="db-instructions" style="display: none">
+<h5>Restaurants: </h5>
+<li>Records details about available restaurants, including their name, website, email, and city.</li>
+<li>Operations: Insert (Create), Browse (Read), Update, and Delete.</li>
+<hr>
+
+<h5>Cuisines: </h5> 
+<li>Records the name of the available cuisines on our website.</li>
+<li>Operations: Insert (Create), Browse (Read), and Update.</li>
+<hr>
+
+<h5>Cities: </h5>
+<li>Lists the locations we currently have available restaurants for and cities where we currently have customers from.</li>
+<li>Operations: Insert (Create), Browse (Read), Update, and Delete.</li>
+<hr>
+
+<h5>Users: </h5>
+<li>Records details about users currently on the platform. Users can browse the platform without registering for an account, but cannot leave a review without first registering.</li>
+<li>Operations: Insert (Create), Browse (Read), Update, and Delete.</li>
+<hr>
+
+<h5>Reviews: </h5> 
+<li>Records details about restaurant reviews recorded on our platform. Reviews include specific ratings for each restaurant and the number of reviews currently associated with each user.</li>
+<li>Operations: Insert (Create), Browse (Read) and Update.</li>
+<li>Note: Deleted users will NOT lead to a deleted review, the review would just have the associated user listed as 'Null'.</li>
+<hr>
+
+<h5>Restaurants' Cuisines: </h5> 
+<li>Records details about restaurants and their associated cuisine.</li>
+<li>Operations: Insert (Create), Browse (Read), Update, and Delete.</li>
+<hr>
+
+<script>
+  const targetDiv = document.getElementById("db-instructions"); 
+  const btn = document.getElementById("toggle");
+  function displayInstructions() {
+    if (targetDiv.style.display !== "none") {
+      targetDiv.style.display = "none"; 
+    } else {
+      targetDiv.style.display = "block"; 
+    }
+  }; 
+</script>
+
 </body>
 </div>
 
