--- a/views/restaurant_has_cuisines.hbs
+++ b/views/restaurant_has_cuisines.hbs
@@ -20,21 +20,30 @@
 <div id="top">
 <h1 align="center">Restaurants' Cuisines</h1>
 
-<nav class="navbar navbar-inverse center"> 
-    <div class="container">
-        <div class="navbar-header">
-            {{!-- <button class="btn btn-outline-primary" onClick="redirectHome()">Homepage</a></button> | <button class="nav-link btn btn-outline-primary" onClick="redirectRestaurants()">Restaurants</button> | <button class="btn btn-outline-primary" href="/cuisines">Cuisines</button> | <button class="btn btn-outline-primary" href="/cities">Cities</button> | <button class="btn btn-outline-primary" href="/users">Users</button> | <button class="btn btn-outline-primary" href="/reviews">Reviews</button> | <button class="btn btn-outline-primary" href="/restaurant_has_cuisines">Restaurants' Cuisines</button> --}}
-            [ <a href="/">Home</a> | <a href="restaurants">Restaurants</a> | <a href="/cuisines">Cuisines</a> | <a href="/cities">Cities</a> | <a href="/users">Users</a> | <a href="/reviews">Reviews</a> | <a href="/restaurant-has-cuisines">Restaurants' Cuisines</a> ]
-        </div>
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+  <a class="navbar-brand" href="/">Grubmaster</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" href="/">Home<span class="sr-only"></span></a>
+      <a class="nav-item nav-link" href="/restaurants">Restaurants</a>
+      <a class="nav-item nav-link" href="/cuisines">Cuisines</a>
+      <a class="nav-item nav-link" href="/cities">Cities</a>
+      <a class="nav-item nav-link" href="/users">Users</a>
+      <a class="nav-item nav-link" href="/reviews">Reviews</a>
+      <a class="nav-item nav-link active" href="/restaurant_has_cuisines">Restaurants' Cuisines</a>
     </div>
+
+  </div>
 </nav>
 
 </div>
 <p>&nbsp;</p>
 
 <div id="browse-restaurant-cuisines">
-    <p><button href="restaurant_has_cuisines/add-restaurant-cuisine" onClick="newRestaurantCuisine()">Add a New Restaurant-Cuisine Pair</button></p>
-    <p><button href="restaurant_has_cuisines/update-restaurant-restaurant-cuisine" onClick="updateRestaurantCuisine()">Update a Restaurant-Cuisine Pair</button></p>
+    <p><button type="button" class="btn btn-primary" href="restaurants/add-restaurant-cuisine" onClick="newRestaurantCuisine()">Add a New Restaurant-Cuisine Pair</button></p>
 
     <table id="restaurant-cuisines-table" 
     class="table table-striped table-bordered table-hover" 
@@ -51,8 +60,8 @@
             <th class="header" scope="col">Restaurant Cuisine ID</th>
             <th class="header" scope="col">Restaurant</th>
             <th class="header" scope="col">Cuisine</th>
+            <th class="header" scope="col">Edit</th>
             <th class="header" scope="col" id="delete">Delete</th>
-            <t
         </tr>
     </thead>
 
@@ -61,9 +70,10 @@
         {{#each data}}
         <tr align="center" data-value={{this.restaurant_cuisine_id}}>
             <td>{{this.restaurant_cuisine_id}}</td>
-            <td>{{this.restaurants}}</td>
-            <td>{{this.cuisines}}</td>
-            <td><button onClick="deleteRestaurantCuisine({{this.restaurant_cuisine_id}})">Delete</button></td>
+            <td id="restaurant">{{this.restaurants}}</td>
+            <td id="cuisine">{{this.cuisines}}</td>
+            <td><a href="/restaurant_has_cuisines/edit_restaurant_cuisine.html/{{this.restaurant_cuisine_id}}" class="btn btn-warning active" role="button" aria-pressed="true">Edit</a></td>
+            <td><button onClick="if (confirm('Are you sure you wish to delete this entry?') === true) {deleteRestaurantCuisine({{this.restaurant_cuisine_id}})}"class="btn btn-danger active" role="button" aria-pressed="true">Delete</button></td>
         </tr>
         {{/each}}
     </tbody>
@@ -73,91 +83,70 @@
 </div>
 <p>&nbsp;</p>
 
-<div id="search-restaurant-cuisine">
+<div class="form-fields" id="search-restaurant-cuisine">
     <h2>Search for a Restaurants' Cuisine below.</h2>
-    <p>Search by restaurant or cuisine name using the fields below. Partial names are OK too!</p>
-    <form id="search-restaurant-cuisine-form" method='GET' action='/restaurant-has-cuisines'>
+    <p>Search by restaurant or name using the fields below. Partial names are OK too!</p>
+    <form id="search-restaurant-cuisine-form" method='GET' action='/restaurant_has_cuisines'>
         <label for="input-rc-restaurant-search">Search by Restaurant Name: </label>
         <input type="text" name="rc_restaurantSearch" id="input-rc-restaurant-search">
-
-        {{!-- <label for="input-rc-cuisine-search">Search by Cuisine Name: </label>
+{{!-- 
+        <label for="input-rc-cuisine-search">Search by Cuisine Name: </label>
         <input type="text" name="rc_cuisineSearch" id="input-rc-cuisine-search">
          --}}
-        <input type="submit">
-        <a href="/restaurant_has_cuisines"><button>Reset</button></a>
+        <input type="submit" value="Search">
+        <a href="/restaurant_has_cuisines"><input type="button" value="Reset"></a>
     </form>
 </div>
+
 <p>&nbsp;</p>
 
-{{!-- Add data using AJAX --}}
-<div id="add-restaurant-cuisine">
-    <h2>Add a new restaurant and cuisine association: </h2>
-    <p>To add a new restaurant and cuisine association, please enter the information below and click 'Submit'! </p> 
+{{!-- Add new restaurant-cuisine using HTML --}}
+<div class="form-fields" id="add-restaurant-cuisine">
+    <h2>Add a new restaurant-cuisine association: </h2>
+    <p>To add a new restaurant-cuisine, please enter the information below and click 'Submit'! </p> 
     <p><small>Note: * indicates a required field.</small></p>
 
-    {{!-- Add restaurant's cuisine using HTML --}}
-
-    <form id="add-restaurant-cuisine-form-ajax">
-        <p><label>Restaurant Name: </label><select name="input-rc-restaurant" id="input-rc-restaurant">
+    <form id="add-restaurant-cuisine-form" method="POST" action="/restaurant_has_cuisines/add-restaurant-cuisine-form">
+        <p><label for="input-rc-restaurant">* Restaurant Name: &nbsp;</label>
+        <select name="input-rc-restaurant" id="input-rc-restaurant" required>
             <option value="">Select a Restaurant</option>
             {{#each restaurants}}
             <option value="{{this.restaurant_id}}">{{this.restaurant_name}}</option>
             {{/each}}
         </select></p>
 
-        <p><label>Cuisine Name: </label><select name="input-rc-cuisine" id="input-rc-cuisine">
+        <p><label for="input-rc-cuisine">* Cuisine Name: &nbsp;</label>
+        <select name="input-rc-cuisine" id="input-rc-cuisine" required>
             <option value="">Select a Cuisine</option>
             {{#each cuisines}}
             <option value="{{this.cuisine_id}}">{{this.cuisine_name}}</option>
             {{/each}}
         </select></p>
 
-        <span id="error"></span>
-        <p><input type="submit">
-        <input type="button" value="Cancel" onClick="browseRestaurantCuisines()"></p>
-
+        <p><input type="submit" id="addRestaurantCuisine" value="Submit" onClick="return validateForm();" class="btn btn-primary"> 
+        <input type="button" value="Cancel" onClick="browseRestaurantCuisines()" class="btn btn-secondary"></p>
+        
     </form>
 </div>
 
-<script src="./js/restaurantHasCuisines_insert.js"></script>
-
 <p>&nbsp;</p>
 
-<div id="update-restaurant-cuisine">
-<h2>Update a Restaurant's Cuisine Details:</h2>
-<p>To update a specific restaurant's cuisine details, select the restaurant cuisine ID from the dropdown menu and enter the desired restaurant and cuisine from the dropdown menu on the right.</p>
-<form id="update-restaurant-cuisine-form-ajax">
-
-    <p><label>Restaurant-Cuisine ID: </label> <select name="selectedRestaurantCuisine" id="selectedRestaurantCuisine">
-        <option value="">Select a Restaurant-Cuisine ID</option>
-        {{#each data}}
-        <option value="{{this.restaurant_cuisine_id}}">{{this.restaurant_cuisine_id}}</option>
-        {{/each}}
-    </select></p>
-
-    <p><label>Restaurant Name: </label> <select name="update-rc-restaurant" id="update-rc-restaurant">
-        <option value="">Select a Restaurant</option>
-        {{#each restaurants}}
-        <option value="{{this.restaurant_id}}">{{this.restaurant_name}}</option>
-        {{/each}}
-    </select></p>
-
-    <p><label>Cuisine Name: </label><select name="update-rc-cuisine" id="update-rc-cuisine">
-        <option value="">Select a Cuisine</option>
-        {{#each cuisines}}
-        <option value="{{this.cuisine_id}}">{{this.cuisine_name}}</option>
-        {{/each}}
-    </select></p>
-
-    <input type="submit">
-    <input type="button" value="Cancel" onClick="browseRestaurantCuisines()"></p>
-
-</form>
-<script src="./js/restaurantHasCuisines_update.js"></script> 
-
-</div>
-
-<p>&nbsp;</p>
+<script>
+    function validateForm() {
+        let requiredFields = document.getElementById('add-restaurant-cuisine-form')
+            .querySelectorAll('[required]')
+        let valid = []; 
+        requiredFields.forEach((element) => {
+            if (element.value !== "") {
+                valid.push(true)
+            } else {valid.push(false)}
+        })
+        let checker = arr => arr.every(v => v === true); 
+        if (checker(valid)) {
+            alert('Successfully added new restaurant-cuisine association!')
+        }
+    }
+</script>
 
 </body> 
 </html>
