--- a/views/edit_restaurant_cuisine.hbs
+++ b/views/edit_restaurant_cuisine.hbs
@@ -41,8 +41,6 @@
     <h4>Please Complete All Fields</h4>
     
             <form action="/restaurant_has_cuisines/edit_restaurant_cuisine.html/{{data.0.restaurant_cuisine_id}}" id="edit_restaurant_cuisine_form" method="POST">
-                
-                <legend>Please Fill Out All Fields</legend>
     
                 <fieldset>
                     <input type="hidden" value="{{data.0.restaurant_cuisine_id}}" class="form-control" id="restaurant_cuisine_id" name="restaurant_cuisine_id" required>
@@ -69,12 +67,30 @@
                 </fieldset>
     
                 <input type="submit" value="Edit Restaurant-Cuisine" name="editRestaurantCuisine" id="edit-restaurant-cuisine-button" class="btn btn-primary"
-                onClick="alert(`Successfully updated Restaurant-Cuisine ID #{{data.0.restaurant_cuisine_id}}`);">
+                onClick="if (validateForm()) {alert(`Successfully updated Restaurant-Cuisine ID #{{data.0.restaurant_cuisine_id}}`)};">
     
                 <input type="reset" class="btn btn-secondary">
     
                 <a href='/restaurant_has_cuisines'><input class="btn btn-secondary" type="button" value="Cancel"></a>
     
             </form>
+
+<script>
+    function validateForm() {
+        let requiredFields = document.getElementById('update-restaurant-cuisine')
+            .querySelectorAll('[required]')
+        let valid = []; 
+        requiredFields.forEach((element) => {
+            if (element.value !== "") {
+                valid.push(true)
+            } else {valid.push(false)}
+        })
+        let checker = arr => arr.every(v => v === true); 
+        if (checker(valid)) {
+            return true;
+        }
+    }
+</script>
+
 </body>
 </html>
