--- a/views/cities.hbs
+++ b/views/cities.hbs
@@ -108,6 +108,8 @@
 <p>&nbsp;</p>
 
 <script>
+    // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
+    // Checks if every required field is filled out before sending alert
     function validateForm() {
         let requiredFields = document.getElementById('add-city-form')
             .querySelectorAll('[required]')
