--- a/views/restaurants.hbs
+++ b/views/restaurants.hbs
@@ -138,6 +138,7 @@
 
 <script>
     // Data Validation for required fields Source: https://stackoverflow.com/questions/57087145/check-if-all-required-fields-are-filled-in-a-specific-div 
+    // Checks if every required field is filled out before sending alert
     function validateForm() {
         let requiredFields = document.getElementById('add-restaurant-form')
             .querySelectorAll('[required]')
